--- a/src/sass/apropos.scss
+++ b/src/sass/apropos.scss
@@ -4,6 +4,9 @@
 .infoSite .critere {
     @include infoBar  
 }
+.critere span{
+    padding-left: 5px;
+}
 .infoSite .infoZone { 
     width: 70%;
     height: 50px;
@@ -21,16 +24,15 @@
 .infoSite .btnFleche{
     @include btnFleche 
 }
+.infoSite .btnFleche.active{
+    transform: translateX(-20%) rotate(180deg); 
+}
 
 
 
 .aproposContainer {
     display: flex;
-    flex-direction: column;
-    
-    
-;
-    
+    flex-direction: column 
     
 }
 
@@ -40,6 +42,30 @@
     @include aproposPhoto
     }
 
+/* Small devices (phones, less than 768px) */
+@media (max-width: 767.98px) and (min-width:320px){
+ .aproposPhoto{
+    width: 89%;
+    height: 111px;
+    margin-bottom: 20px;
+ }
+ .infoSite{
+    width: 89%;
+ }
+ .infoSite .critere{
+    width: 100%;
+    height: 30px;
+    margin-bottom: 20px;
+ }
+ .infoSite .infoZone { 
+    height: 90px;
+    width: 100%; 
+    
+}
+ .aproposContainer {
+    margin-bottom: 10px;
+ }
+}
 
 
 
