--- a/src/sass/fichierList.scss
+++ b/src/sass/fichierList.scss
@@ -26,6 +26,11 @@
 }
 .ficheItem span{
   position:absolute;
+  margin-bottom: 15px;
+  margin-left: 8px;
+  display: inline-block;
+  width: 15%; 
+  color: black;
 }
 .fichiers {
     width: 90%;
@@ -55,6 +60,9 @@
   }
   .ficheItem {
     height: 255px;
+  }
+  .ficheItem span{
+    width: 30%;
   }
 
 }
