--- a/src/sass/footer.scss
+++ b/src/sass/footer.scss
@@ -18,3 +18,16 @@
 .FooterContainer div{
     color: white;
 }
+@media (max-width: 767.98px) and (min-width:320px){
+    .FooterContainer div{
+        margin-top: 10px;
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        width: 30%;
+        
+    }
+    .FooterContainer{
+        margin-top: 50px;
+    }
+}
