--- a/src/sass/logements.scss
+++ b/src/sass/logements.scss
@@ -92,6 +92,9 @@ color: grey;
 .btnFleche{
     @include btnFleche
 }
+.zoneInfo .btnFleche.active{
+    transform: translateX(-20%) rotate(180deg); 
+}
 .infoPresentation {
     width: 100%; 
     height: 200px;
