--- a/src/sass/apropos.scss
+++ b/src/sass/apropos.scss
@@ -1,32 +1,16 @@
 @import './index.scss';
 
 
-.infoSite .critere {
-    @include infoBar  
-}
-.critere span{
-    padding-left: 5px;
-}
-.infoSite .infoZone { 
-    width: 70%;
-    height: 50px;
-    text-align:justify;
-    
-}
 .infoSite {
    display: flex;
     flex-direction: column;
     align-items: center;
     margin: auto;
-    width: 80%;
+    width: 60%; 
+    margin-bottom: 15px;
     
 }
-.infoSite .btnFleche{
-    @include btnFleche 
-}
-.infoSite .btnFleche.active{
-    transform: translateX(-20%) rotate(180deg); 
-}
+
 
 
 
@@ -36,10 +20,12 @@
     
 }
 
-.aproposPhoto {
-        
+.banner.aproposPhoto {
+
+        background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, .4)),url('../images/Paysage.png');
+        background-size: cover; 
+        background-position: center;
     
-    @include aproposPhoto
     }
 
 /* Small devices (phones, less than 768px) */
