--- a/src/sass/header.scss
+++ b/src/sass/header.scss
@@ -29,7 +29,7 @@ display: flex;
 /* Small devices (phones, less than 768px) */
 @media (max-width: 767.98px) and (min-width:320px){
 .navContainer img{
-    width: 45%;
+    width: 145px; 
     height: 47px;
 }
 .navContainer {
