--- a/src/sass/home.scss
+++ b/src/sass/home.scss
@@ -1,20 +1,37 @@
 @import './index.scss';
 
-.homePhoto {
-    @include homePhoto  
-} 
+.banner.homePhoto {
+    background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, .4)),url('../images/HomePhoto.png');
+    background-size: cover;
+    background-position: center;
+    @media (max-width: 767.98px) and (min-width:320px){
+        
+            width: 90%;
+            height: 111px;  
+            border-radius: 10px;
+            display: flex;
+            justify-content:flex-start;
 
-@media (max-width: 767.98px) and (min-width:320px){
-    .homePhoto {
-        width: 89%;
-        height: 111px;
-        font-size:xx-large; 
-        text-align: left;
-        border-radius: 10px;
-        padding-left: 20px;
+            
+            
         
     }
+} 
+.banner.homePhoto span{
+    @media (max-width: 767.98px) and (min-width:320px){
+        
+        width: 215px; 
+        height: 48px; 
+        font-size:24px;
+        line-height: 24px;
+        font-weight: 700; 
+        margin-left: 10px;
+        
 }
+    
+}
+
+
 
  
 
