--- a/src/sass/logements.scss
+++ b/src/sass/logements.scss
@@ -11,6 +11,9 @@
     display: flex;
     flex-direction: column;
 }
+.partie1 h2{
+    color: $color-primary; 
+}
 ul.tags{
     list-style-type: none;
     padding-left: 0;
@@ -20,6 +23,7 @@ ul.tags li{
     display: inline-block;
     margin-right: 10px;
     color: azure;
+    font-weight: 700; 
     background-color: $color-primary; 
     border-radius: 10px;
     width: 115px;
@@ -35,8 +39,9 @@ ul.tags li{
     display: flex;
     flex-wrap: wrap; 
     color: $color-primary;
-    text-align: center;
+    text-align: right;
     line-height: 33px;
+    padding-right: 5px;
 
 }
 .host {
@@ -83,34 +88,20 @@ color: grey;
     flex-direction: column;
     width: 45%;
 }
-.barPresentation{
-    @include barPresentation
+.zoneInfo .infoZone.open { 
+    height: 200px; 
 }
-.barPresentation span{
-    padding-left: 5px;
-}
-.btnFleche{
-    @include btnFleche
-}
-.zoneInfo .btnFleche.active{
-    transform: translateX(-20%) rotate(180deg); 
-}
-.infoPresentation {
-    width: 100%; 
-    height: 200px;
-    text-align:left;
 
-}
-.infoPresentation ul{
+.infoZone ul{
     list-style-type: none;
-    padding: 0;
+    padding: 15px 0 0 15px; 
     margin-top: 0;
 }
-.infoPresentation {
+.infoZone {
     padding-left: 5px; 
    }
 
-.infoPresentation li{
+.infoZone li{ 
     padding-left: 5px; 
    }
 
@@ -181,6 +172,7 @@ color: grey;
     }
     .zoneInfo{
         width: 100%;
+        margin-bottom: 20px;
     }
     .barPresentation{
        height: 30px;
