--- a/src/sass/slideShow.scss
+++ b/src/sass/slideShow.scss
@@ -10,6 +10,7 @@
     height: 415px; 
     margin: auto;
     align-items: center;
+    border-radius: 25px;
 }
 .showPhoto .btnGauche {
     color: azure;
@@ -31,6 +32,9 @@
     bottom: 34%;
     left: 50%;
     color: azure;
+    @media (max-width: 767.98px) and (min-width:320px){
+        display: none;
+    }
 }
 
 
@@ -42,9 +46,13 @@
     }
     .showPhoto .btnGauche {
         font-size: medium;
+        top: 30%;
+        left: 11%;
     }
     .showPhoto .btnDroite{
         font-size: medium;
+        top: 30%;
+        right: 11%;
     }
     .showPhoto .numeroPhoto{
         display: none;
